Fixed lack of visibility within contactBody due to white text and white background

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ button:active{
 #contactsBody td{
   font-size: 0.9em;
   background-color: #ffffff;
-  color: #ffffff;
+  color: #000000;
   text-align: left;
   padding: 12px 10px;
 }
